--- a/index.html
+++ b/index.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Janis Caceres">
+    <link rel="stylesheet" href="./assets/styles.css">
     <title>Document</title>
 </head>
 <body>
-    hi
+    <section>
+        <!--HEADER-->
+        <header>
+            <h1>Fashion Couture</h1>
+        </header>
+
+        <!--NAVBAR-->
+            <nav class="navbar">
+                  <div>
+                    <label class="toggler" for="toggler">
+                      <i class="fa-solid fa-bars fa-2xl"></i>
+                    </label>
+                    <input class="menu-toggler" type="checkbox" name="" id="toggler">
+                    <ul class="ul-links">
+                      <li class="navbar-item"><a href="#home">Inicio</a></li>
+                      <li class="navbar-item"><a href="#brands">Marcas</a></li>
+                      <li class="navbar-item"><a href="#designers">Diseñadores</a></li>
+                      <li class="navbar-item"><a href="#contact">Contacto</a></li>
+                    </ul>
+                  </div>
+            </nav>
+    </section>
 </body>
 </html>
