padding en version movil

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Gupter:wght@400;500;700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <!--ICONS-->
     <script src="https://kit.fontawesome.com/c8102e27c1.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Fashion Couture</title>
 </head>
 <body>
     <section class="container">
@@ -275,7 +275,7 @@
                     <img src="./assets/imgs/jisoo-CD.jpg" alt="" />
                   </div>
                   <div>
-                    <h2 class="card-title">Jisoo (BlackPink) - X<small>Chanel</small></h2>
+                    <h2 class="card-title">Jisoo (BlackPink) - <small>Chanel</small></h2>
                   </div>
                   <div>
                     <button class="card-button">Ver más</button>
