--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <header class="header" id="home">
             <h1>Fashion Couture</h1>
             <select class="select-box" name="filter" id="filter">
-              <option value="sort">Ordenar por</option>
-              <option value="brands">Marcas</option>
-              <option value="ambassadors">Embajadores</option>
-              <option value="collections">Colecciones</option>
-              <option value="designers">Diseñadores</option>
-              <option value="year">Año</option>
+              <option class="box-item" value="sort">Ordenar por</option>
+              <option class="box-item" value="brands">Marcas</option>
+              <option class="box-item" value="ambassadors">Embajadores</option>
+              <option class="box-item" value="collections">Colecciones</option>
+              <option class="box-item" value="designers">Diseñadores</option>
+              <option class="box-item" value="year">Año</option>
             </select>
         </header>
 
@@ -45,7 +45,6 @@
                     <ul class="ul-links">
                       <li class="navbar-item"><a href="#home">Inicio</a></li>
                       <li class="navbar-item"><a href="#brands">Marcas</a></li>
-                      <li class="navbar-item"><a href="#designers">Diseñadores</a></li>
                       <li class="navbar-item"><a href="#contact">Contacto</a></li>
                     </ul>
                   </div>
@@ -53,7 +52,7 @@
 
             <!--MAIN-->
             <main class="core">
-              <section class="content">
+              <section class="content" id="brands">
                 <div class="card">
                   <div>
                     <img src="./assets/imgs/armani-2024.jpg" alt="" />
@@ -95,7 +94,7 @@
                     <img src="./assets/imgs/hyunjin-versace2.jpg" alt="" />
                   </div>
                   <div>
-                    <h2 class="card-title">Hyunjin (stray Kids) - <small>Versace</small> </h2>
+                    <h2 class="card-title">Hyunjin (Stray Kids) - <small>Versace</small> </h2>
                   </div>
                   <div>
                     <button class="card-button">Ver más</button>
