--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!--NAVBAR-->
             <nav class="navbar">
               <div class="logo">
-                <img src="./assets/imgs/fashion2.png" alt="">
+                <img src="./assets/imgs/fashion2.png" alt="logo de Fashion">
               </div>
                   <div>
                     <label class="toggler" for="toggler">
@@ -55,7 +55,7 @@
               <section class="content" id="brands">
                 <div class="card">
                   <div>
-                    <img src="./assets/imgs/armani-2024.jpg" alt="" />
+                    <img src="./assets/imgs/armani-2024.jpg" alt="Modelo desfilando con un vestido de satén plateado sin tirantes de Armani, colección 2024" />
                   </div>
                   <div>
                     <h2 class="card-title"> Giorgio Armani- <small>2024</small></h2>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="card">
                   <div>
-                    <img src="./assets/imgs/givenchy-1996.jpg" alt="" />
+                    <img src="./assets/imgs/givenchy-1996.jpg" alt="Modelo desfilando con un corsé blanco y una falda larga negra de Givenchy, colección 1996" />
                   </div>
                   <div>
                     <h2 class="card-title">Givenchy - <small>1996</small> </h2>
@@ -79,7 +79,7 @@
 
                 <div class="card">
                   <div>
-                    <img src="./assets/imgs/givenchy-fall-1995.jpg" alt="" />
+                    <img src="./assets/imgs/givenchy-fall-1995.jpg" alt="Modelo desfilando un vestido largo negro con tapado de Givenchy, colección de otoño 1995" />
                   </div>
                   <div>
                     <h2 class="card-title">Givenchy - <small>1995</small></h2>
@@ -91,7 +91,7 @@
 
                 <div class="card">
                   <div>
-                    <img src="./assets/imgs/hyunjin-versace2.jpg" alt="" />
+                    <img src="./assets/imgs/hyunjin-versace2.jpg" alt="Hyunjin del grupo de kpop llamado Stray Kids, modelando un traje negro Versace, junto al logo de la marca" />
                   </div>
                   <div>
                     <h2 class="card-title">Hyunjin (Stray Kids) - <small>Versace</small> </h2>
@@ -103,7 +103,7 @@
 
                 <div class="card">
                   <div>
-                    <img src="./assets/imgs/versace-1991.jpg" alt="" />
+                    <img src="./assets/imgs/versace-1991.jpg" alt="Modelo desfilando un vestido corto negro y una cartera amarilla versace, colección de 1991" />
                   </div>
                   <div>
                     <h2 class="card-title">Versace - <small>1991</small></h2>
@@ -115,7 +115,7 @@
 
                 <div class="card">
                   <div>
-                    <img src="./assets/imgs/suga-valentino.jpg" alt="" />
+                    <img src="./assets/imgs/suga-valentino.jpg" alt="Suga del grupo de kpop BTS, modelando un traje negro de valentino" />
                   </div>
                   <div>
                     <h2 class="card-title">Suga (BTS) - <small>Valentino</small></h2>
@@ -127,7 +127,7 @@
 
                 <div class="card">
                   <div>
-                    <img src="./assets/imgs/AM-2019.jpg" alt="" />
+                    <img src="./assets/imgs/AM-2019.jpg" alt="Modelo desfilando un vestido min  blanco semi transparente con un cinturon de cuero negro extravagante de Alexander McQueen, colección 2019" />
                   </div>
                   <div>
                     <h2 class="card-title">Alexander McQueen - <small>2019</small> </h2>
@@ -139,7 +139,7 @@
 
                 <div class="card">
                   <div>
-                    <img src="./assets/imgs/chanel-1997.jpg" alt="" />
+                    <img src="./assets/imgs/chanel-1997.jpg" alt="Modelo desfilando con un conjunto negro elegante y un sombrero de ala ancha, colección de primavera de Chanel 1997" />
                   </div>
                   <div>
                     <h2 class="card-title">Chanel - <small>1997</small></h2>
@@ -151,7 +151,7 @@
 
                 <div class="card">
                   <div>
-                    <img src="./assets/imgs/AM-2006.jpg" alt="" />
+                    <img src="./assets/imgs/AM-2006.jpg" alt="Modelo desfilando con un vestido de encaje blanco y un tocado extravagante de Alexander McQueen, colección 2006" />
                   </div>
                   <div>
                     <h2 class="card-title">Alexander McQueen - <small>2006</small></h2>
@@ -163,7 +163,7 @@
 
                 <div class="card">
                   <div>
-                    <img src="./assets/imgs/CD-1990.jpg" alt="" />
+                    <img src="./assets/imgs/CD-1990.jpg" alt="Modelo desfilando con un vestido negro y guantes blancos, colección de Christian Dior 1990" />
                   </div>
                   <div>
                     <h2 class="card-title">Christian Dior - <small>1990</small></h2>
@@ -175,7 +175,7 @@
 
                 <div class="card">
                   <div>
-                    <img src="./assets/imgs/CD-1998.jpg" alt="" />
+                    <img src="./assets/imgs/CD-1998.jpg" alt="Modelo desfilando con un conjunto gris claro y un sombrero amplio de Christian Dior, colección 1998" />
                   </div>
                   <div>
                     <h2 class="card-title">Christian Dior - <small>1998</small></h2>
@@ -187,7 +187,7 @@
 
                 <div class="card">
                   <div>
-                    <img src="./assets/imgs/valentino-1998.jpg" alt="" />
+                    <img src="./assets/imgs/valentino-1998.jpg" alt="Modelo desfilando un vestido de moestasilla gris con detalles de perlas de Valentino, colección 1998" />
                   </div>
                   <div>
                     <h2 class="card-title">Valentino - <small>1998</small></h2>
@@ -199,10 +199,10 @@
 
                 <div class="card">
                   <div>
-                    <img src="./assets/imgs/balenciaga-1998.jpg" alt="" />
+                    <img src="./assets/imgs/balenciaga-1998.jpg" alt="Modelo desfilando con un vestido negro largo y sencillo de Balenciaga, colección 1998" />
                   </div>
                   <div>
-                    <h2 class="card-title">balenciaga - <small>1998</small></h2>
+                    <h2 class="card-title">Balenciaga - <small>1998</small></h2>
                   </div>
                   <div>
                     <button class="card-button">Ver más</button>
@@ -211,7 +211,7 @@
 
                 <div class="card">
                   <div>
-                    <img src="./assets/imgs/versace1996.jpg" alt="" />
+                    <img src="./assets/imgs/versace1996.jpg" alt="Modelo desfilando un vestido largo morado de encaje desde la cadera hacía abajo de Versace, colección 1996" />
                   </div>
                   <div>
                     <h2 class="card-title">Versace - <small>1996</small> </h2>
@@ -223,7 +223,7 @@
 
                 <div class="card">
                   <div>
-                    <img src="./assets/imgs/valentino-1991.jpg" alt="" />
+                    <img src="./assets/imgs/valentino-1991.jpg" alt="Modelo desfilando un vestido largo rosado , colección primavera-verano 1991" />
                   </div>
                   <div>
                     <h2 class="card-title">Valentino - <small>1991</small></h2>
@@ -235,7 +235,7 @@
 
                 <div class="card">
                   <div>
-                    <img src="./assets/imgs/DG-2020.jpg" alt="" />
+                    <img src="./assets/imgs/DG-2020.jpg" alt="Modelo desfilando un vestido corto negro, con medias de liga negras y una chaqueta peluda negra Dolce & Gabbana 2020" />
                   </div>
                   <div>
                     <h2 class="card-title">Dolce & Gabbana - <small>2020</small></h2>
@@ -247,7 +247,7 @@
 
                 <div class="card">
                   <div>
-                    <img src="./assets/imgs/AH-Givenchy.jpg" alt="" />
+                    <img src="./assets/imgs/AH-Givenchy.jpg" alt="Audrey Hepburn posando con un vestido largo de Givenchy adornado con bordados florales" />
                   </div>
                   <div>
                     <h2 class="card-title">Audrey Hepburn - <small>Givenchy</small></h2>
@@ -259,7 +259,7 @@
 
                 <div class="card">
                   <div>
-                    <img src="./assets/imgs/jennie-chanel.jpg" alt="" />
+                    <img src="./assets/imgs/jennie-chanel.jpg" alt="Jennie del grupo de kpop BlackPink modelando un vestido negro con una chaqueta negra y medias blancas Chanel junto al logo de la marca" />
                   </div>
                   <div>
                     <h2 class="card-title">Jennie (BlackPink) - <small>Chanel</small></h2>
@@ -271,10 +271,10 @@
 
                 <div class="card">
                   <div>
-                    <img src="./assets/imgs/jisoo-CD.jpg" alt="" />
+                    <img src="./assets/imgs/jisoo-CD.jpg" alt="Jisoo del grupo de kpop BlackPink modelando un conjunto negro y cartera de Dior junto al logo de la marca" />
                   </div>
                   <div>
-                    <h2 class="card-title">Jisoo (BlackPink) - <small>Chanel</small></h2>
+                    <h2 class="card-title">Jisoo (BlackPink) - <small>Dior</small></h2>
                   </div>
                   <div>
                     <button class="card-button">Ver más</button>
@@ -283,7 +283,7 @@
 
                 <div class="card">
                   <div>
-                    <img src="./assets/imgs/Jun-Ji-Hyun-AM.jpg" alt="" />
+                    <img src="./assets/imgs/Jun-Ji-Hyun-AM.jpg" alt="Actríz Jun Ji-Hyun modelando una blusa blanca extravagante y un cinturón blanco con cadenas de Alexander McQueen" />
                   </div>
                   <div>
                     <h2 class="card-title">Jun Ji-Hyun - <small>Alexander McQueen</small></h2>
