--- a/index.html
+++ b/index.html
@@ -292,6 +292,18 @@
                     <button class="card-button">Ver más</button>
                   </div>
                 </div>
+
+                <div class="card">
+                  <div>
+                    <img src="./assets/imgs/BH-balenciaga.jpg" alt="Modelo Bella Hadid modelando un conjunto Balenciaga" />
+                  </div>
+                  <div>
+                    <h2 class="card-title">Bella Hadid - <small>Balenciaga</small></h2>
+                  </div>
+                  <div>
+                    <button class="card-button">Ver más</button>
+                  </div>
+                </div>
               </section>
             </main>
             <footer class="foot" id="contact">
