color en footer

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             <footer class="foot" id="contact">
               <div>
                 <h3>Contacto</h3>
-                <p>fashioncouture@gmail.com</p>
+                <p class="contact">fashioncouture@gmail.com</p>
                 <p><strong>Síguenos en</strong></p>
               </div>
               <div>
